project(CPrimerPlusCodeExamples)

cmake_minimum_required(VERSION 2.8.12)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#option(BUILD_PTH_EXAMPLE "Build GNU PTH example" ON)


add_subdirectory(ch01)
add_subdirectory(ch02)
add_subdirectory(ch03)
add_subdirectory(ch04)
add_subdirectory(ch05)
add_subdirectory(ch06)
add_subdirectory(ch07)
add_subdirectory(ch08)
add_subdirectory(ch09)
add_subdirectory(ch10)
add_subdirectory(ch11)
add_subdirectory(ch12)
add_subdirectory(ch13)
add_subdirectory(ch14)
add_subdirectory(ch15)
add_subdirectory(ch16)
add_subdirectory(ch17)
