add_executable(altnames altnames.c)
add_executable(badcount badcount.c)
add_executable(bases bases.c)
add_executable(charcode charcode.c)
add_executable(escape escape.c)
add_executable(floaterr floaterr.c)
add_executable(platinum platinum.c)
add_executable(print1 print1.c)
add_executable(print2 print2.c)
add_executable(showf_pt showf_pt.c)
add_executable(toobig toobig.c)
add_executable(typesize typesize.c)
