add_executable(defines defines.c)
add_executable(flags flags.c)
add_executable(floatcnv floatcnv.c)
add_executable(floats floats.c)
add_executable(input input.c)
add_executable(intconv intconv.c)
add_executable(longstrg longstrg.c)
add_executable(pizza pizza.c)
add_executable(praise1 praise1.c)
add_executable(praise2 praise2.c)
add_executable(printout printout.c)
add_executable(prntval prntval.c)
add_executable(skip2 skip2.c)
add_executable(strings strings.c)
add_executable(talkback talkback.c)
add_executable(varwid varwid.c)
add_executable(width width.c)
