add_executable(addemup addemup.c)
add_executable(add_one add_one.c)
add_executable(bottles bottles.c)
add_executable(convert convert.c)
add_executable(divide divide.c)
add_executable(golf golf.c)
add_executable(min_sec min_sec.c)
add_executable(post_pre post_pre.c)
add_executable(pound pound.c)
add_executable(rules rules.c)
add_executable(running running.c)
add_executable(shoes1 shoes1.c)
add_executable(shoes2 shoes2.c)
add_executable(sizeof sizeof.c)
add_executable(squares squares.c)
add_executable(wheat wheat.c)
