add_executable(boolean boolean.c)
add_executable(cmpflt cmpflt.c)
add_executable(do_while do_while.c)
add_executable(entry entry.c)
add_executable(for_13s for_13s.c)
add_executable(for_char for_char.c)
add_executable(for_cube for_cube.c)
add_executable(for_down for_down.c)
add_executable(for_geo for_geo.c)
add_executable(for_none for_none.c)
add_executable(for_show for_show.c)
add_executable(for_wild for_wild.c)
add_executable(postage postage.c)
add_executable(power power.c)
add_executable(rows1 rows1.c)
add_executable(rows2 rows2.c)
add_executable(scores_in scores_in.c)
add_executable(summing summing.c)
add_executable(sweetie1 sweetie1.c)
add_executable(sweetie2 sweetie2.c)
add_executable(t_and_f t_and_f.c)
add_executable(trouble trouble.c)
add_executable(truth truth.c)
add_executable(when when.c)
add_executable(while1 while1.c)
add_executable(while2 while2.c)
add_executable(zeno zeno.c)
