add_executable(animals animals.c)
add_executable(break break.c)
add_executable(chcount chcount.c)
add_executable(colddays colddays.c)
add_executable(cypher1 cypher1.c)
add_executable(cypher2 cypher2.c)
add_executable(divisors divisors.c)
add_executable(electric electric.c)
add_executable(paint paint.c)
add_executable(skippart skippart.c)
add_executable(vowels vowels.c)
add_executable(wordcnt wordcnt.c)
