add_executable(binary binary.c)
add_executable(factor factor.c)
add_executable(lesser lesser.c)
add_executable(lethead1 lethead1.c)
add_executable(lethead2 lethead2.c)
add_executable(loccheck loccheck.c)
add_executable(misuse misuse.c)
add_executable(proto proto.c)
add_executable(recur recur.c)
add_executable(swap1 swap1.c)
add_executable(swap2 swap2.c)
add_executable(swap3 swap3.c)
add_executable(usehotel usehotel.c hotel.c)
