add_executable(arf arf.c)
add_executable(array2d array2d.c)
add_executable(bounds bounds.c)
add_executable(day_mon1 day_mon1.c)
add_executable(day_mon2 day_mon2.c)
add_executable(day_mon3 day_mon3.c)
add_executable(designate designate.c)
add_executable(flc flc.c)
add_executable(no_data no_data.c)
add_executable(order order.c)
add_executable(pnt_add pnt_add.c)
add_executable(ptr_ops ptr_ops.c)
add_executable(rain rain.c)
add_executable(some_data some_data.c)
add_executable(sum_arr1 sum_arr1.c)
add_executable(sum_arr2 sum_arr2.c)
add_executable(vararr2d vararr2d.c)
add_executable(zippo1 zippo1.c)
add_executable(zippo2 zippo2.c)
