add_executable(compare compare.c)
add_executable(compback compback.c)
add_executable(copy1 copy1.c)
add_executable(copy2 copy2.c)
add_executable(copy3 copy3.c)
add_executable(format format.c)
add_executable(hello hello.c)
add_executable(join_chk join_chk.c)
add_executable(mod_str mod_str.c)
add_executable(name1 name1.c)
add_executable(name2 name2.c)
add_executable(name3 name3.c)
add_executable(nogo nogo.c)
add_executable(nono nono.c)
add_executable(p_and_s p_and_s.c)
#add_executable(put1 put1.c)
#add_executable(put2 put2.c)
add_executable(put_out put_out.c)
add_executable(put_put put_put.c)
add_executable(quit_chk quit_chk.c)
add_executable(quotes quotes.c)
add_executable(repeat repeat.c)
add_executable(scan_str scan_str.c)
add_executable(sort_str sort_str.c)
add_executable(starsrch starsrch.c)
add_executable(str_cat str_cat.c)
add_executable(strcnvt strcnvt.c)
add_executable(strings-ch11 strings.c)
add_executable(test_fit test_fit.c)
