add_executable(book book.c)
add_executable(booksave booksave.c)
add_executable(complit complit.c)
add_executable(enum enum.c)
add_executable(flexmemb flexmemb.c)
add_executable(friend friend.c)
add_executable(friends friends.c)
add_executable(func_ptr func_ptr.c)
add_executable(funds1 funds1.c)
add_executable(funds2 funds2.c)
add_executable(funds3 funds3.c)
add_executable(funds4 funds4.c)
add_executable(manybook manybook.c)
add_executable(names1 names1.c)
add_executable(names2 names2.c)
add_executable(names3 names3.c)
