add_executable(assert assert.c)
target_link_libraries(assert -lm)
add_executable(byebye byebye.c)
add_executable(glue glue.c)
add_executable(ifdef ifdef.c)
add_executable(mac_arg mac_arg.c)
add_executable(mems mems.c)
add_executable(pe15-7 pe15-7.c)
add_executable(predef predef.c)
add_executable(preproc preproc.c)
add_executable(qsorter qsorter.c)
add_executable(rect_pol rect_pol.c)
target_link_libraries(rect_pol -lm)
add_executable(subst subst.c)
add_executable(useheader useheader.c names_st.c)
add_executable(varargs varargs.c)
add_executable(variadic variadic.c)
target_link_libraries(variadic -lm)

# Uncomment these to see the build errors that arise.
#add_executable(inl1 inl1.c)
#add_executable(inl2 inl2.c)
#add_executable(inl3 inl3.c)
#add_executable(doubincl doubincl.c)
#add_executable(names_st names_st.c)
#add_executable(names_str names_str.c)
